# Ousia-OS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.config/: nextest.toml
.github/instructions/: architecture-abstraction.instructions.md  design-task.instructions.md  development-entry.instructions.md  development-standards.instructions.md  documentation-standards.instructions.md  implementation-quality.instructions.md  ousia-kernel-boundaries.instructions.md  ousia-workflow.instructions.md  prompt-architecture.instructions.md  testing-evolution.instructions.md
design/: check-docs.config.json  glossary.md  outline.md  pain-points.md  ref.md  requirements.md  target.md
design/core/: 00-philosophy.md  01-capsule-and-capability.md  01-package-cell.md  02-capsule-and-capability.md  02-package-cell.md  (+20 more)
kernel/: Cargo.toml
kernel-bin/: Cargo.toml
kernel-bin/linker/: aarch64-qemu-virt.ld
kernel-bin/src/: entry.rs  main.rs
kernel/src/: entry.rs  error.rs  invocation.rs  ipc.rs  lib.rs  main.rs  message.rs  notification.rs  object.rs  reply.rs  scheduler.rs  state.rs  tcb.rs  thread_action.rs
kernel/src/boot/: mod.rs  x86_64.rs
kernel/src/cap/: mod.rs  space.rs
kernel/src/error/: mod.rs
kernel/src/handle/: mod.rs
kernel/src/invocation/: mod.rs
kernel/src/ipc/: endpoint.rs  mod.rs
kernel/src/memory/: frame.rs
kernel/src/notification/: state.rs
kernel/src/object/: mod.rs  table.rs
kernel/src/process/: mod.rs
kernel/src/reply/: state.rs
kernel/src/scheduler/: core.rs
kernel/src/state/: kernel.rs
kernel/src/syscall/: mod.rs
kernel/src/thread/: action.rs  mod.rs  tcb.rs
kernel/src/vm/: mod.rs
kernel/tests/: README.md  channel.rs  executor_cnode.rs  executor_retype.rs  handle_object.rs  memory_frame.rs  object_state.rs  process_bootstrap.rs  vm.rs
kernel/tests/support/: mod.rs
ostd/: Cargo.toml
ostd/src/: cpu.rs  lib.rs
ostd/src/arch/aarch64/: console.rs  cpu.rs  exception.rs  mod.rs
ostd/src/arch/x86_64/: console.rs  cpu.rs
ostd/src/boot/: aarch64.rs  mod.rs  x86_64.rs
ostd/src/console/: mod.rs  uart_ns16650a.rs
ostd/src/mm/: frame.rs  heap.rs  mod.rs  page_table.rs
ostd/tests/: page_table.rs
scripts/: check-docs.rb
(+96 files in other folders)
