[workspace]
# 指定工作区包含哪些子项目
members = ["kernel", "kernel-bin", "ostd"]
resolver = "3"

# 默认 Cargo 命令只覆盖能在 host target 下检查的库 crate。
# `kernel-bin` 是 bare-metal image crate，使用显式 `--target *-unknown-none` 命令验证。
default-members = ["kernel", "ostd"]

[workspace.package]
version = "0.0.1"
authors = ["Your Name <you@example.com>"]
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
# 在这里声明公共依赖，子项目可以直接引用
bitflags = { version = "2", default-features = false }
rstest = "0.26.1"
