[package]
name = "kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
autobins = false

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
bitflags = { version = "2", default-features = false }

[target.'cfg(target_os = "none")'.dependencies]
ostd = { path = "../ostd" }

[features]
exception-smoke = ["ostd/exception-smoke"]
