[package]
name = "ostd"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bitflags = { version = "2", default-features = false }
spin = "0.9"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "11.2"
tock-registers = "0.10"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64_crate = { package = "x86_64", version = "0.15", default-features = false, features = [
    "instructions",
] }
